# malta

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
docs/: Makefile  conf.py  example.ipynb  make.bat
src/derive_transport/: derive_transport.py
src/malta/: __init__.py  model.py  transport.py  utils.py
src/malta/aux_data/: site_info.json  species_info.json
src/malta/model_data/sinks/: J_fields.nc  O1D_fields.nc  OH_fields-cm3.nc  OH_fields-old.nc  OH_fields.nc  strat_loss.nc
src/malta/model_data/transport/: transport2D_1900.nc  transport2D_1980.nc  transport2D_1981.nc  transport2D_1982.nc  transport2D_1983.nc  transport2D_1984.nc  transport2D_1985.nc  transport2D_1986.nc  transport2D_1987.nc  transport2D_1988.nc  transport2D_1989.nc  transport2D_1990.nc  transport2D_1991.nc  transport2D_1992.nc  transport2D_1993.nc  transport2D_1994.nc  transport2D_1995.nc  transport2D_1996.nc  transport2D_1997.nc  transport2D_1998.nc  transport2D_1999.nc  transport2D_2000.nc  transport2D_2001.nc  transport2D_2002.nc  transport2D_2003.nc  transport2D_2004.nc  transport2D_2005.nc  transport2D_2006.nc  transport2D_2007.nc  transport2D_2008.nc  transport2D_2009.nc  transport2D_2010.nc  transport2D_2011.nc  transport2D_2012.nc  transport2D_2013.nc  transport2D_2014.nc  transport2D_2015.nc  transport2D_2016.nc  transport2D_2017.nc  transport2D_2018.nc  (+6 more)
tests/: test_malta.py
