[tool.poetry]
name = "malta"
version = "0.1.0"
description = "A 2D model of atmospheric transport"
authors = ["Luke Western"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <3.11"
numpy = "~1.21"
xarray = "^2023.5.0"
pandas = "^2.0.2"
numba = "0.55"
scipy = "^1.10.1"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
myst-nb = {version = "^0.17.2", python = "^3.9"}
sphinx-autoapi = "^2.1.1"
sphinx-rtd-theme = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
